{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1276,
  "lineage": "907a8323-7aaf-70a1-f9dc-b3ded2e6ff5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c6e5e7b9c601970",
            "arn": "arn:aws:ec2:eu-west-3:015937138823:elastic-ip/eipalloc-04c6e5e7b9c601970",
            "association_id": "eipassoc-0f7a1f6d4718b56fa",
            "domain": "vpc",
            "id": "eipalloc-04c6e5e7b9c601970",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-06079a27a2dad27d1",
            "private_dns": "ip-10-0-1-87.eu-west-3.compute.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-15-236-10-207.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.10.207",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-eip"
            },
            "tags_all": {
              "Name": "autocap-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04cdc5e4b2145a4a5",
            "arn": "arn:aws:ec2:eu-west-3:015937138823:instance/i-0bd61a9e827565d19",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "autocap-instance-profile",
            "id": "i-0bd61a9e827565d19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "autocap-pub-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-067bd7816742214de"
              }
            ],
            "primary_network_interface_id": "eni-067bd7816742214de",
            "private_dns": "ip-10-0-1-192.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_ip": "15.237.252.163",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0024641bbc767fe61",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f0947fa4494f8c5",
            "tags": {
              "Name": "autocap-wordpress_server"
            },
            "tags_all": {
              "Name": "autocap-wordpress_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95b14b7064a453f",
              "sg-0db9c081c9ebd9b9b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_cloudfront_distribution.s3_distribution",
            "aws_db_instance.wordpress_db",
            "aws_db_subnet_group.database",
            "aws_iam_instance_profile.iam-instance-profile",
            "aws_iam_role.iam_role",
            "aws_key_pair.key",
            "aws_s3_bucket.autocap_media",
            "aws_security_group.autocap_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.prv_sn1",
            "aws_subnet.prv_sn2",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc",
            "data.aws_cloudfront_distribution.cloudfront",
            "null_resource.pre_scan",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:internet-gateway/igw-0fdddf4aef190b30c",
            "id": "igw-0fdddf4aef190b30c",
            "owner_id": "015937138823",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-igw"
            },
            "tags_all": {
              "Name": "autocap-igw"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:loadbalancer/app/autocap-lb/1d2ecd126fb77281",
            "arn_suffix": "app/autocap-lb/1d2ecd126fb77281",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "autocap-lb-67938074.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:loadbalancer/app/autocap-lb/1d2ecd126fb77281",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "autocap-lb",
            "preserve_host_header": false,
            "region": "eu-west-3",
            "security_groups": [
              "sg-0db9c081c9ebd9b9b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a02378ea24c82a0"
              },
              {
                "subnet_id": "subnet-09f0947fa4494f8c5"
              }
            ],
            "subnets": [
              "subnet-04a02378ea24c82a0",
              "subnet-09f0947fa4494f8c5"
            ],
            "tags": {
              "Name": "autocap-autocap-lb"
            },
            "tags_all": {
              "Name": "autocap-autocap-lb"
            },
            "vpc_id": "vpc-0540c6226ddca6527",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_s3_bucket.autocap_log_bucket",
            "aws_s3_bucket_policy.autocap_log_bucket_policy",
            "aws_security_group.autocap_sg",
            "aws_subnet.pub_sn1",
            "aws_subnet.pub_sn2",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.log_bucket_access_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:listener/app/autocap-lb/1d2ecd126fb77281/239772fd44a39912",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:targetgroup/autocap-tg/db7b6c93c6fa5522",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:listener/app/autocap-lb/1d2ecd126fb77281/239772fd44a39912",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:loadbalancer/app/autocap-lb/1d2ecd126fb77281",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_s3_bucket.autocap_log_bucket",
            "aws_s3_bucket_policy.autocap_log_bucket_policy",
            "aws_security_group.autocap_sg",
            "aws_subnet.pub_sn1",
            "aws_subnet.pub_sn2",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.log_bucket_access_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:targetgroup/autocap-tg/db7b6c93c6fa5522",
            "arn_suffix": "targetgroup/autocap-tg/db7b6c93c6fa5522",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/indextest.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:targetgroup/autocap-tg/db7b6c93c6fa5522",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "autocap-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:targetgroup/autocap-tg/db7b6c93c6fa5522-20251213211548079900000003",
            "port": 80,
            "region": "eu-west-3",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:015937138823:targetgroup/autocap-tg/db7b6c93c6fa5522",
            "target_id": "i-0bd61a9e827565d19"
          },
          "dependencies": [
            "aws_cloudfront_distribution.s3_distribution",
            "aws_db_instance.wordpress_db",
            "aws_db_subnet_group.database",
            "aws_iam_instance_profile.iam-instance-profile",
            "aws_iam_role.iam_role",
            "aws_instance.wordpress_server",
            "aws_key_pair.key",
            "aws_lb_target_group.tg",
            "aws_s3_bucket.autocap_media",
            "aws_security_group.autocap_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.prv_sn1",
            "aws_subnet.prv_sn2",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc",
            "data.aws_cloudfront_distribution.cloudfront",
            "null_resource.pre_scan",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c6e5e7b9c601970",
            "association_id": "eipassoc-0f7a1f6d4718b56fa",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a36101ddc580b419",
            "network_interface_id": "eni-06079a27a2dad27d1",
            "private_ip": "10.0.1.87",
            "public_ip": "15.236.10.207",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f0947fa4494f8c5",
            "tags": {
              "Name": "autocap-ngw"
            },
            "tags_all": {
              "Name": "autocap-ngw"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:route-table/rtb-08a710dc8556d58f6",
            "id": "rtb-08a710dc8556d58f6",
            "owner_id": "015937138823",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a36101ddc580b419",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autocap-prv_rt"
            },
            "tags_all": {
              "Name": "autocap-prv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:route-table/rtb-0cf661554e8287c4c",
            "id": "rtb-0cf661554e8287c4c",
            "owner_id": "015937138823",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fdddf4aef190b30c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autocap-pub_rt"
            },
            "tags_all": {
              "Name": "autocap-pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_prv_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e007f8b6ff141e6",
            "region": "eu-west-3",
            "route_table_id": "rtb-08a710dc8556d58f6",
            "subnet_id": "subnet-0562969d6203e449c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.prv_rt",
            "aws_subnet.prv_sn1",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_prv_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a55d1053f7652d9a",
            "region": "eu-west-3",
            "route_table_id": "rtb-08a710dc8556d58f6",
            "subnet_id": "subnet-0632be9ac2727d2c0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.prv_rt",
            "aws_subnet.prv_sn2",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0333430f1b1633a92",
            "region": "eu-west-3",
            "route_table_id": "rtb-0cf661554e8287c4c",
            "subnet_id": "subnet-09f0947fa4494f8c5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sn1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_pub_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b565ba833b730d4",
            "region": "eu-west-3",
            "route_table_id": "rtb-0cf661554e8287c4c",
            "subnet_id": "subnet-04a02378ea24c82a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sn2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autocap_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:security-group/sg-0db9c081c9ebd9b9b",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db9c081c9ebd9b9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "autocap-sg",
            "name_prefix": "",
            "owner_id": "015937138823",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "autocap-autocap-sg"
            },
            "tags_all": {
              "Name": "autocap-autocap-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:security-group/sg-0d95b14b7064a453f",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All TRAFFIC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d95b14b7064a453f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "MYSQPORT",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "015937138823",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "autocap-rds-sg"
            },
            "tags_all": {
              "Name": "autocap-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:subnet/subnet-0562969d6203e449c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0562969d6203e449c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015937138823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-prv_sn1"
            },
            "tags_all": {
              "Name": "autocap-prv_sn1"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:subnet/subnet-0632be9ac2727d2c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0632be9ac2727d2c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015937138823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-prv_sub2"
            },
            "tags_all": {
              "Name": "autocap-prv_sub2"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:subnet/subnet-09f0947fa4494f8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f0947fa4494f8c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015937138823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-pub_sn1"
            },
            "tags_all": {
              "Name": "autocap-pub_sn1"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:subnet/subnet-04a02378ea24c82a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a02378ea24c82a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015937138823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-pub_sn2"
            },
            "tags_all": {
              "Name": "autocap-pub_sn2"
            },
            "vpc_id": "vpc-0540c6226ddca6527"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:015937138823:vpc/vpc-0540c6226ddca6527",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019d7f6b0ab4610ba",
            "default_route_table_id": "rtb-000cbf5da6af5b7f3",
            "default_security_group_id": "sg-0e4d679bebd48708d",
            "dhcp_options_id": "dopt-04d40c5b6c070c218",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0540c6226ddca6527",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000cbf5da6af5b7f3",
            "owner_id": "015937138823",
            "region": "eu-west-3",
            "tags": {
              "Name": "autocap-vpc"
            },
            "tags_all": {
              "Name": "autocap-vpc"
            }
          }
        }
      ]
    }
  ]
}